--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -44,6 +44,12 @@ jobs:
             echo "No significant vulnerabilities found"
             exit 0
           fi
+      - name: Upload Trivy image scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v3
+        if: ${{ always() && github.ref == 'refs/heads/main' }} # Bypass non-zero exit code..
+        with:
+          sarif_file: "trivy-results.sarif"
+          category: trivy-image-scan
       - name: Generate cosign vulnerability scan record
         # Third-party action, pin to commit SHA!
         # See https://docs.github.com/en/actions/security-guides/security-hardening-for-github-actions
