--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -216,3 +216,28 @@ jobs:
         if: ${{ failure() }}
         with:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+  deploy-staging-stackit:
+    runs-on: ubuntu-latest
+    needs:
+      - build-and-push-image
+    concurrency: deploy-staging-stackit
+    environment: staging
+    steps:
+      - name: Deploy new images
+        uses: digitalservicebund/argocd-deploy@auth-token # Use the auth-token branch for STACKIT
+        with:
+          environment: staging-stackit
+          version: ${{ github.sha }}
+          deploying_repo: ris-norms-migration-import
+          infra_repo: ris-norms-infra
+          github_app_private_key: ${{ secrets.GITOPS_NEURIS_APP_PRIVATE_KEY }}
+          github_app_id: ${{ secrets.GITOPS_NEURIS_APP_ID}}
+          app: ris-norms-staging
+          argocd_auth_token: ${{ secrets.ARGOCD_AUTH_TOKEN }}
+          argocd_server: ${{ secrets.ARGOCD_SERVER_STACKIT }}
+      - name: Send status to Slack
+        uses: digitalservicebund/notify-on-failure-gha@814d0c4b2ad6a3443e89c991f8657b10126510bf # v1.5.0
+        if: ${{ failure() }}
+        with:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
