Run pipeline at least once a week
RISDEV-0000

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,6 +5,8 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  schedule:
+    - cron: "0 13 * * 3" # Every Wednesday at 13:00 UTC
   # Allow to run this workflow manually
   workflow_dispatch:
 
