--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -137,7 +137,7 @@ jobs:
 
   deploy-staging:
     runs-on: ubuntu-latest
-    concurrency: deploy-staging
+    concurrency: deployment
     needs:
       - build-and-push-image
     environment: staging
@@ -165,7 +165,7 @@ jobs:
 
   deploy-uat:
     runs-on: ubuntu-latest
-    concurrency: deploy-uat
+    concurrency: deployment
     needs:
       - deploy-staging
     environment: staging
@@ -193,7 +193,7 @@ jobs:
 
   deploy-production:
     runs-on: ubuntu-latest
-    concurrency: deploy-production
+    concurrency: deployment
     needs:
       - deploy-uat
     environment: production
@@ -223,7 +223,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build-and-push-image
-    concurrency: deploy-staging-stackit
+    concurrency: deployment
     environment: staging
     steps:
       - name: Deploy new images
